fixed going out of bound again

--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -14,6 +14,12 @@
 		background-color: $black-lighten;
 		cursor: pointer;
 	}
+
+	&:disabled {
+		background-color: $black-lighten;
+		color: gray;
+		cursor: not-allowed;
+	}
 }
 
 .icon {
